<resources>
    <string name="app_name">Hobme</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_application_id" translatable="false">APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbAPP_ID</string>
    <string name="username">userName</string>
    <string name="userRank">userRank</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="dbname_users">users</string>
    <string name="field_username">fullName</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activities_fragments_container">ActivitiesFragmentsContainer</string>

    <!--Create Activity Strings-->
    <string name="createButton">ADD</string>
    <string name="addPhoto">CHOOSE PHOTO</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="switchText">Private</string>
    <string-array name="choose_photo_options">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>Cancel</item>
    </string-array>
    <string name="title_activity_nav">NavAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Sign Out</string>
    <string name="menu_send">Send</string>
    <string name="open">OPEN</string>

    <!--Toolbar list menu-->
    <string name="action_sort">Sort</string>
    <string name="action_filter">Filter</string>
    <string name="option_start">Start Date</string>
    <string name="option_duration">Duration</string>
    <string name="option_category">Category</string>

    <!--Toolbar detailed activity menu-->
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!--Bottom nav bar menu-->
    <string name="action_history">Previous</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>

    <!--Login Fragment-->
    <string name="editText_email">Email</string>
    <string name="editText_pass">Password</string>
    <string name="login_btn">Login</string>
    <string name="register_link">No account yet? Create one</string>

    <!--Register Fragment-->
    <string name="editText_name">Full Name</string>
    <string name="create_account">Create Account</string>

    <!--Create Activity-->
    <string name="activityInfo">Activity Information</string>
    <string name="activityName">Activity Name</string>
    <string name="membersTxt">Members</string>
    <string name="membersSpace">To</string>

    <!--Detailed Activity-->
    <string name="joinActivity">JOIN</string>
    <string name="saveActivity">SAVE</string>

</resources>
